@@ -85,6 +85,10 @@ Information about older versions may be found <a href="http://pwsafe.org/history
 <td>When database is locked, clipboard is cleared and the hotkey works.</td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3069250);return false;">3069250</a></td>
+<td>PasswordSafe now remembers the selected entry on Lock After Idle.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3062769);return false;">3062769</a></td>
 <td>Groups list in Add/Edit dialog box no longer "remembers" groups from previously opened database.</td>
 </tr>
