@@ -17,6 +17,7 @@ New Features for 3.23.1
 Bugs fixed in 3.23.1
 ====================
 [3084401] When database is locked, clipboard is cleared and the hotkey works.
+[3069250] PasswordSafe now remembers the selected entry on Lock After Idle.
 [3062769] Groups list in Add/Edit dialog box no longer "remembers"
 groups from previously opened database.
 [] Spanish translations for installer and application updated - thanks
